[package]
name = "westend-bridge-node"
description = "Substrate node compatible with Westend runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
clap 													= { workspace = true, features = ["derive"] }
futures 												= { workspace = true }
jsonrpsee 												= { workspace = true, features = ["server"] }
serde_json 												= { workspace = true }

# Bridge dependencies
bp-messages 											= { workspace = true }
bridge-runtime-common									= { workspace = true, features = ["integrity-test"] }
westend-runtime 										= { workspace = true, features = ["std"] }
rococo-runtime 											= { workspace = true, features = ["std"] }
bridge-hub-westend-runtime 								= { workspace = true, features = ["std"] }
bridge-hub-rococo-runtime 								= { workspace = true, features = ["std"] }
westend-runtime-constants 								= { workspace = true }

# Substrate Dependencies

sc-consensus-beefy 										= { workspace = true }
sc-consensus-beefy-rpc 									= { workspace = true }
sp-consensus-beefy 										= { workspace = true, features = ["std"] }
frame-benchmarking 										= { workspace = true, features = ["std"] }
frame-benchmarking-cli 									= { workspace = true }
staging-node-inspect 									= { workspace = true }
mmr-rpc 												= { workspace = true }
pallet-transaction-payment-rpc 							= { workspace = true }
sc-basic-authorship 									= { workspace = true }
pallet-im-online 										= { workspace = true }

sp-authority-discovery 									= { workspace = true }
sc-cli 													= { workspace = true}
sc-client-api 											= { workspace = true }
sc-consensus 											= { workspace = true }
sc-consensus-aura 										= { workspace = true }
sc-executor 											= { workspace = true }
sp-consensus-babe 										= { workspace = true }

sc-consensus-grandpa 									= { workspace = true }
sc-consensus-grandpa-rpc 								= { workspace = true }
sc-keystore 											= { workspace = true }
sc-network 												= { workspace = true }

sc-offchain 											= { workspace = true }
sc-rpc 													= { workspace = true }
sc-service 												= { workspace = true }
sc-telemetry 											= { workspace = true }
sc-transaction-pool 									= { workspace = true }
sc-transaction-pool-api 								= { workspace = true }
sp-consensus-aura 										= { workspace = true, features = ["std"] }
sp-core 												= { workspace = true, features = ["std"] }
sp-arithmetic 											= { workspace = true }
sp-consensus-grandpa 									= { workspace = true }
sp-runtime 												= { workspace = true, features = ["std"] }
sp-timestamp 											= { workspace = true }
substrate-frame-rpc-system 								= { workspace = true }
sc-network-common 										= { workspace = true }

# Polkadot Dependencies
staging-xcm 											= { workspace = true, features = ["std"] }
polkadot-primitives  									= { workspace = true }
pallet-staking 											= { workspace = true }
parachains-common 										= { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils 							= { workspace = true }
frame-benchmarking-cli 									= { workspace = true }

[features]
default = []
std = [ "bp-messages/std", "bridge-runtime-common/std", 	"pallet-staking/std", 	"sp-arithmetic/std", ]
runtime-benchmarks = []

try-runtime = [
	"bridge-hub-rococo-runtime/try-runtime",
	"bridge-hub-westend-runtime/try-runtime",
	"westend-runtime/try-runtime",
]
