[package]
name = "rococo-parachain-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional=true }

[dependencies]
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

# Bridge depedencies

bp-asset-hub-rococo = { workspace = true }
bp-asset-hub-westend = { workspace = true }
bp-bridge-hub-rococo = { workspace = true }
bp-bridge-hub-westend = { workspace = true }
bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-polkadot-bulletin = { workspace = true }
bp-parachains = { workspace = true }
bp-relayers = { workspace = true }
bp-runtime = { workspace = true }
bp-rococo = { workspace = true }
bp-westend = { workspace = true }
bp-xcm-bridge-hub = { workspace = true}
pallet-bridge-grandpa = { workspace = true }
pallet-bridge-messages = { workspace = true }
pallet-bridge-relayers = { workspace = true }
pallet-bridge-parachains = { workspace = true }
pallet-xcm-bridge-hub = { workspace = true }
bridge-runtime-common = { workspace = true }
bridge-hub-rococo-runtime = { workspace = true }
rococo-runtime-constants = { workspace = true }

# Substrate Dependencies

## Substrate Primitive Dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

## Substrate FRAME Dependencies
frame-executive = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }

## Substrate Pallet Dependencies
pallet-aura = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-identity = { workspace = true }
pallet-insecure-randomness-collective-flip  = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-treasury = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true, features = ["bridging"] }
cumulus-primitives-core = { workspace = true }
staging-parachain-info = { workspace = true }

# Polkadot Dependencies
parachains-common = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }
pallet-xcm = { workspace = true }

pallet-xcm-handler = { workspace = true }
pallet-random-node-selector = { workspace = true }

[dev-dependencies]
bridge-runtime-common = { workspace = true, features = ["integrity-test"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"substrate-wasm-builder",
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-xcm/runtime-benchmarks',
	'staging-xcm-builder/runtime-benchmarks',
]
std = [
    "substrate-wasm-builder",
	"parity-scale-codec/std",
	"scale-info/std",

	"bp-asset-hub-rococo/std",
	"bp-asset-hub-westend/std",
	"bp-bridge-hub-rococo/std",
	"bp-bridge-hub-westend/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-polkadot-bulletin/std",
	"bp-parachains/std",
	"bp-relayers/std",
	"bp-runtime/std",
	"bp-rococo/std",
	"bp-westend/std",
	"bp-xcm-bridge-hub/std",
	"bridge-runtime-common/std",
	"bridge-hub-rococo-runtime/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-relayers/std",
	"pallet-bridge-parachains/std",
	"pallet-xcm-bridge-hub/std",
	"rococo-runtime-constants/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-consensus-aura/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-benchmarking/std",
	"frame-system-rpc-runtime-api/std",

	"pallet-aura/std",
	"pallet-authority-discovery/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-identity/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",

	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"staging-parachain-info/std",

	"parachains-common/std",
	"polkadot-primitives/std",
	"polkadot-runtime-parachains/std",
	"polkadot-runtime-common/std",
	"polkadot-parachain-primitives/std",
	"staging-xcm/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"pallet-xcm/std",
    "pallet-xcm-handler/std",
    "pallet-random-node-selector/std",

	"bridge-runtime-common/std",
]
