[package]
name = "pallet-check-node-computational-work"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec 											= { workspace = true, features = ["max-encoded-len"] }
scale-info 													= { workspace = true, features = ["derive"] }

frame-benchmarking 											= { workspace = true, optional = true }
frame-support 												= { workspace = true }
frame-system 												= { workspace = true }
sp-core 													= { workspace = true }
sp-runtime 													= { workspace = true }
pallet-authorship 											= { workspace = true }
pallet-session 												= { workspace = true }

# Coupling with the pallet computational work
pallet-computational-work 									= { workspace = true }

[dev-dependencies]
sp-io 														= { workspace = true }
frame-support-test 											= { workspace = true }
pallet-insecure-randomness-collective-flip 					= { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-computational-work/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-session/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]

