[package]
name = "pallet-computational-work"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec									 = { workspace = true, features = ["max-encoded-len"] }
scale-info									 	     = { workspace = true, features = ["derive"] }

frame-benchmarking									 = { workspace = true }
frame-support										 = { workspace = true }
frame-system										 = { workspace = true }
sp-core										 		 = { workspace = true }
sp-runtime 											 = { workspace = true }
sp-io										 		 = { workspace = true }

[dev-dependencies]
frame-support-test 									 = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]
